@@ -200,9 +200,9 @@ def Environment():
   env.Tool('nvcc', toolpath = [os.path.join(thisDir)])
 
   # get the preprocessor define to use for the device backend
-  backend_define = { 'cuda' : 'THRUST_DEVICE_BACKEND_CUDA', 'omp' : 'THRUST_DEVICE_BACKEND_OMP', 'ocelot' : 'THRUST_DEVICE_BACKEND_CUDA', 'tbb' : 'THRUST_DEVICE_BACKEND_TBB' }[env['backend']] 
-  env.Append(CFLAGS   = ['-DTHRUST_DEVICE_BACKEND=%s' % backend_define])
-  env.Append(CXXFLAGS = ['-DTHRUST_DEVICE_BACKEND=%s' % backend_define])
+  backend_define = { 'cuda' : 'THRUST_DEVICE_SYSTEM_CUDA', 'omp' : 'THRUST_DEVICE_SYSTEM_OMP', 'ocelot' : 'THRUST_DEVICE_SYSTEM_CUDA', 'tbb' : 'THRUST_DEVICE_SYSTEM_TBB' }[env['backend']] 
+  env.Append(CFLAGS   = ['-DTHRUST_DEVICE_SYSTEM=%s' % backend_define])
+  env.Append(CXXFLAGS = ['-DTHRUST_DEVICE_SYSTEM=%s' % backend_define])
 
   # get the preprocessor define to use for the host system
   host_backend_define = { 'cpp' : 'THRUST_HOST_SYSTEM_CPP', 'omp' : 'THRUST_HOST_SYSTEM_OMP', 'tbb' : 'THRUST_HOST_SYSTEM_TBB' }[env['host_backend']] 
