@@ -191,7 +191,7 @@ struct TestVectorLowerBound
   {
 // XXX an MSVC bug causes problems inside std::stable_sort's implementation:
 //     std::lower_bound/upper_bound is confused with thrust::lower_bound/upper_bound
-#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_OMP)
+#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_OMP)
     KNOWN_FAILURE;
 #else
     thrust::host_vector<T>   h_vec = unittest::random_integers<T>(n); thrust::sort(h_vec.begin(), h_vec.end());
@@ -220,7 +220,7 @@ struct TestVectorUpperBound
   {
 // XXX an MSVC bug causes problems inside std::stable_sort's implementation:
 //     std::lower_bound/upper_bound is confused with thrust::lower_bound/upper_bound
-#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_OMP)
+#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_OMP)
     KNOWN_FAILURE;
 #else
     thrust::host_vector<T>   h_vec = unittest::random_integers<T>(n); thrust::sort(h_vec.begin(), h_vec.end());
@@ -248,7 +248,7 @@ struct TestVectorBinarySearch
   {
 // XXX an MSVC bug causes problems inside std::stable_sort's implementation:
 //     std::lower_bound/upper_bound is confused with thrust::lower_bound/upper_bound
-#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_OMP)
+#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_OMP)
     KNOWN_FAILURE;
 #else
     thrust::host_vector<T>   h_vec = unittest::random_integers<T>(n); thrust::sort(h_vec.begin(), h_vec.end());
@@ -276,7 +276,7 @@ struct TestVectorLowerBoundDiscardIterator
   {
 // XXX an MSVC bug causes problems inside std::stable_sort's implementation:
 //     std::lower_bound/upper_bound is confused with thrust::lower_bound/upper_bound
-#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_OMP)
+#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_OMP)
     KNOWN_FAILURE;
 #else
     thrust::host_vector<T>   h_vec = unittest::random_integers<T>(n); thrust::sort(h_vec.begin(), h_vec.end());
@@ -307,7 +307,7 @@ struct TestVectorUpperBoundDiscardIterator
   {
 // XXX an MSVC bug causes problems inside std::stable_sort's implementation:
 //     std::lower_bound/upper_bound is confused with thrust::lower_bound/upper_bound
-#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_OMP)
+#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_OMP)
     KNOWN_FAILURE;
 #else
     thrust::host_vector<T>   h_vec = unittest::random_integers<T>(n); thrust::sort(h_vec.begin(), h_vec.end());
@@ -337,7 +337,7 @@ struct TestVectorBinarySearchDiscardIterator
   {
 // XXX an MSVC bug causes problems inside std::stable_sort's implementation:
 //     std::lower_bound/upper_bound is confused with thrust::lower_bound/upper_bound
-#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_OMP)
+#if (THRUST_HOST_COMPILER == THRUST_HOST_COMPILER_MSVC) && (THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_OMP)
     KNOWN_FAILURE;
 #else
     thrust::host_vector<T>   h_vec = unittest::random_integers<T>(n); thrust::sort(h_vec.begin(), h_vec.end());
