@@ -32,13 +32,13 @@
 #endif // THRUST_HOST_SYSTEM
 
 
-#if   THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_CUDA
+#if   THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_CUDA
 #include <thrust/system/cuda/detail/default_decomposition.h>
-#elif THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_OMP
+#elif THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_OMP
 #include <thrust/system/omp/detail/default_decomposition.h>
-#elif THRUST_DEVICE_BACKEND == THRUST_DEVICE_BACKEND_TBB
+#elif THRUST_DEVICE_SYSTEM == THRUST_DEVICE_SYSTEM_TBB
 #include <thrust/system/tbb/detail/default_decomposition.h>
 #else
 #error "Unknown device system."
-#endif // THRUST_DEVICE_BACKEND
+#endif // THRUST_DEVICE_SYSTEM
 
